pkg added to build executables

--- a/package.json
+++ b/package.json
@@ -3,28 +3,44 @@
   "version": "1.0.0",
   "description": "Connector between backend &amp; local network",
   "main": "index.js",
+  "bin": "index.js",
   "scripts": {
     "test": "echo \"No test specified\" && exit 0",
     "start": "./node_modules/.bin/nodemon index.js",
     "lint": "./node_modules/.bin/eslint .",
-    "lint:fix": "./node_modules/.bin/eslint --fix ."
+    "lint:fix": "./node_modules/.bin/eslint --fix .",
+    "build": "npx pkg ."
+  },
+  "pkg": {
+    "scripts": [
+      "http",
+      "https"
+    ],
+    "targets": [
+      "node16-linux-x64",
+      "node16-windows-x64",
+      "node16-darwin-x64"
+    ],
+    "outputPath": "dist"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OpenHausIO/connector.git"
   },
-  "author": "",
+  "author": "Marc Stirner <marc.stirner@open-haus.io>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/OpenHausIO/connector/issues"
   },
   "homepage": "https://github.com/OpenHausIO/connector#readme",
   "dependencies": {
-    "ws": "^8.5.0"
+    "ws": "^8.5.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
     "eslint": "^8.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pkg": "^5.8.0"
   }
 }
