--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/OpenHausIO/connector#readme",
   "dependencies": {
-    "optimist": "^0.6.1",
+    "minimist": "^1.2.6",
     "ws": "^8.5.0",
     "xml-js": "^1.6.11"
   },
