--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "bin": "index.js",
   "scripts": {
     "test": "echo \"No test specified\" && exit 0",
-    "start": "./node_modules/.bin/nodemon index.js",
+    "dev": "./node_modules/.bin/nodemon -w . -w .env index.js",
     "lint": "./node_modules/.bin/eslint .",
     "lint:fix": "./node_modules/.bin/eslint --fix .",
     "build": "npx pkg .",
+    "bundle": "grunt compress",
+    "build:docker-image": "docker build . -t openhaus/connector:latest",
     "postinstall": "scripts/post-install.sh"
   },
   "pkg": {
@@ -35,13 +37,16 @@
   },
   "homepage": "https://github.com/OpenHausIO/connector#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "minimist": "^1.2.6",
     "ws": "^8.5.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
     "eslint": "^8.10.0",
+    "grunt": "^1.5.3",
+    "grunt-contrib-compress": "^2.0.0",
+    "grunt-env": "^1.0.1",
     "nodemon": "^2.0.15",
     "pkg": "^5.8.0"
   }
