--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,9 @@
         "ecmaVersion": 12
     },
     "ignorePatterns": [
-        "node_modules"
+        "node_modules",
+        "build",
+        "dist"
     ],
     "extends": [
         "eslint:recommended"
