--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "connector",
-  "version": "1.3.0",
-  "description": "Connector between backend &amp; local network",
+  "version": "1.0.0",
+  "description": "Connector between backend & local network",
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
