--- a/.github/workflows/node-js.yml
+++ b/.github/workflows/node-js.yml
@@ -16,8 +16,8 @@ jobs:
 
         strategy:
             matrix:
-                os: [ubuntu-18.04, ubuntu-latest]
-                node-version: [16.x]
+                os: [ubuntu-latest]
+                node-version: [16.x, 17.x, 18.x]
                 # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
         steps:
